samples/_failures_safe/1761542200_888146_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fd9afd8.c: In function ‘main’:
./samples/SAFE/__tmp_3fd9afd8.c:136:19: error: expected ‘)’ at end of input
  136 |         if (rows_b
      |            ~      ^
      |                   )
./samples/SAFE/__tmp_3fd9afd8.c:136:9: error: expected declaration or statement at end of input
  136 |         if (rows_b
      |         ^~
./samples/SAFE/__tmp_3fd9afd8.c:136:9: error: expected declaration or statement at end of input
